# ChangeLog for x11-terms/xterm
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-terms/xterm/ChangeLog,v 1.379 2013/02/14 13:42:55 jlec Exp $

  14 Feb 2013; Justin Lecher <jlec@gentoo.org> xterm-285.ebuild,
  xterm-288.ebuild, metadata.xml:
  Add Workaround for ncurses[tinfo], #454736; correct HOMEPAGE; improve usage
  of EAPI >=4; add missing die

  09 Jan 2013; Samuli Suominen <ssuominen@gentoo.org> -xterm-279.ebuild,
  -xterm-281.ebuild, -xterm-287.ebuild:
  old

*xterm-288 (09 Jan 2013)

  09 Jan 2013; Samuli Suominen <ssuominen@gentoo.org> +xterm-288.ebuild:
  Version bump.

  04 Jan 2013; Jeroen Roovers <jer@gentoo.org> xterm-285.ebuild:
  Stable for HPPA (bug #440872).

  01 Jan 2013; Raúl Porcel <armin76@gentoo.org> xterm-285.ebuild:
  s390/sh stable wrt #440872

  30 Dec 2012; Agostino Sarubbo <ago@gentoo.org> xterm-285.ebuild:
  Stable for alpha, wrt bug #440872

  28 Dec 2012; Agostino Sarubbo <ago@gentoo.org> xterm-285.ebuild:
  Stable for sparc, wrt bug #440872

  28 Dec 2012; Agostino Sarubbo <ago@gentoo.org> xterm-285.ebuild:
  Stable for ia64, wrt bug #440872

  17 Dec 2012; Markus Meier <maekke@gentoo.org> xterm-285.ebuild:
  arm stable, bug #440872

  08 Dec 2012; Agostino Sarubbo <ago@gentoo.org> xterm-285.ebuild:
  Stable for ppc64, wrt bug #440872

  28 Nov 2012; Brent Baude <ranger@gentoo.org> xterm-285.ebuild:
  Marking xterm-285 ppc stable for bug 440872

*xterm-287 (28 Nov 2012)

  28 Nov 2012; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  +xterm-287.ebuild:
  Version bump.

  18 Nov 2012; Agostino Sarubbo <ago@gentoo.org> xterm-285.ebuild:
  Stable for x86, wrt bug #440872

  16 Nov 2012; Agostino Sarubbo <ago@gentoo.org> xterm-285.ebuild:
  Stable for amd64, wrt bug #440872

*xterm-285 (31 Oct 2012)

  31 Oct 2012; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  +xterm-285.ebuild:
  Version bump.
