@@ -1,16 +1,16 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
 DIST xterm-285.tgz 1101536 SHA256 5360d66871bde7c8cde934da8fec8abd70f5ee365f5cc911298a87cb797eb38b SHA512 db03dabf2e82d4125f6228da3a56dfd434a8240e26aad094568206b722da40a45500df590db2379e1508adbf8a6766ac68e0719086b9730ccdfce9fe8a058978 WHIRLPOOL c255f0c6759452db4acc695ba8ee26b8e5a342506c7fdec28ed4d47cb6b95ed84b027c97bab01c391a05e5d84d2c7b33f36072d700e2089a15a72e3103de4914
 DIST xterm-288.tgz 1086474 SHA256 aaa1d9fab8da3010dced60b4fd41be5ec27c37ea5d5a0c1d5d8693b51ee75533 SHA512 8a4095c2e99175159618098439b3376cf76b6e5d3fa3d97e94fcee848fbf605bfbc4036cafbcd19ee6a896a9fef8df81befef95588898e426614ec17fe8455e9 WHIRLPOOL f4388db2d9396dc0281eb10557bd4f53184f1e3b194fc944458a62ccd3bb6e3588243606fe37ce43c00144d5af4474c648e475715caf38911ab94ac74051a934
 EBUILD xterm-285.ebuild 2743 SHA256 47e7ec1407b0168ff1deb6046e99c36b95158908a0eab7eba1c8b099526b7940 SHA512 1783bcae246c8447f10e5b1b87f1f3f7e12231323c429ec98da75182d96802dacbb045c9bbddbfbdca3c158c7604daccf01f4d227c6365ce234152ddb09de2ba WHIRLPOOL da8191064275be61750e7070600f8d05ef2dd4fe1c785bbffada43311eae9363e7de11f3e88ec0cabc07244179ba651ba0391f1f3e40083267704226275c3eda
-EBUILD xterm-288.ebuild 2613 SHA256 92a3ed9a409543e20acf20e4e6d0c88a4e3514b5278f681087fdfcff0d29889a SHA512 707651b12072581bbc6a23b3f7d76cf552bcc7e4423ef75917873004e4f31aba965127fd97cdfadef012e609defeb700bd71ffd4aadfcb646dbad781527f6cb0 WHIRLPOOL d84342ae1e3abea28863a5d1b1b7738551e70fc01af35f6f2517230f4d927cbb986bfaa86983a0a7abc97a3d2cb2a2a930582b4b4b4f9d84e0f72967a5eadd87
-MISC ChangeLog 48206 SHA256 61617be4ecd1a2779cde75381455989eb030e925cb315e55fc6c7225f7be4a54 SHA512 3de953ae8c4044e6b87c52489b1f0c1ad7feb2660433216d7e3375bb18e0f95c6d0e7e26a3bf9520bc7b28807e10add56e6f9e2e617a9879ae66c0acf568a5d9 WHIRLPOOL 760659f9bb5a3caee2c4ac0d04cf14b087974305ee8b3be43e38513b4398df94d5f207cafcf66bfe2bc993da2787f70820d390d7df941e14717bfb75d6e37126
+EBUILD xterm-288.ebuild 2626 SHA256 088dc71a8f9260938f0756a1136d0471dfab1dba3c2f7724b65afe61cc71398c SHA512 ad0f2569d068dae9645d195c209d6e099a034b79719fdab9d5805029b603b11261a2c63c4c27d9f14a25cc42cee003f30d81c2ed87e545969b0e05357d00951a WHIRLPOOL 527b377f24cbd7a501a0636be89e7d998e86ccdd0d5805dafcbb9d375d3dce7b30b093aee2abc831e34629ccac3877f3854795b65476903c0dbe6f72ae6f9f4f
+MISC ChangeLog 48320 SHA256 6353ac97615e21ac213aefde902034a47e2477151d67feec74fc6333372c1474 SHA512 2b87d8cbb32a5c0201e845163518e985fad6d3737de9722d4fe6d96639a6d5ad8e38e1514c95cf8cc29933a5a0aa7c07145c86245481b0ec7b341b45f2fe257e WHIRLPOOL 9dddbad6b1dcfabf1d42ea4a57661fcf9b581a82ebd855b51736acb206f32137b0e34772ed5493da4d824047c3d1ec03472730e0b0e62bb40475de4574798849
 MISC metadata.xml 342 SHA256 79c1020e38f0c9d02dc0723fd20f9527fcd8bbc117c4ea841d088f36e63bb51b SHA512 2bee642205c59c80b274dbebe6a139600ec65efc11aaddc3c4148c3d09cca7a3f37dcd4b110f6a102078e174f273ccbd4787144837f29b1d4b620fbac5d9ebe7 WHIRLPOOL 67be7e45a6386d67637aeb8f6941abb5153a669dc256f16f6adb0f3c9ba27c669d7356bbd18721fec7807936469d9ff1f53827a025b9d30dce873c66e1f6f972
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREKAAYFAlEc6f8ACgkQgAnW8HDreRaujQCghFEkCcFnEz30Rexws34Ld7e5
-TwcAn1KDO6k6CUJ3Ys5Zz0boJUClh6/l
-=ipTW
+iEYEAREIAAYFAlEr2U8ACgkQ/ejvha5XGaMuGACdHL+/THhBrFB5/CO3rDl+qHt1
+HAgAn0uks/3c9XLBr8ml4i2zuajtqrU9
+=1+cd
 -----END PGP SIGNATURE-----
