@@ -1,6 +1,9 @@
 # ChangeLog for x11-terms/xterm
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-terms/xterm/ChangeLog,v 1.379 2013/02/14 13:42:55 jlec Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-terms/xterm/ChangeLog,v 1.380 2013/02/25 21:36:13 zmedico Exp $
+
+  25 Feb 2013; Zac Medico <zmedico@gentoo.org> xterm-288.ebuild:
+  Fix for prefix and add ~arm-linux keyword.
 
   14 Feb 2013; Justin Lecher <jlec@gentoo.org> xterm-285.ebuild,
   xterm-288.ebuild, metadata.xml:
